testsuite/tests/safeHaskell/check/Check09.hs
{-# LANGUAGE Safe #-}
module Check09 where

import Prelude
import Data.ByteString.Char8

b :: ByteString
b = pack "Hello World"

